feat: Add metadata to site

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,700" rel="stylesheet">
-    <title>React App</title>
+    <title>Abu Dhabi Hidden Gems</title>
+    <meta name="description" content="Bored and have nothing to do in Abu Dhabi, UAE or planning to visit here? Here's an interactive map and list showing a couple of hidden gems to explore.">
+    <!-- Tell the browser how to display the page initially when it loads on a mobile device. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Tell Internet Explorer to use the best engine you've got and give the user the most up to date experience. -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   </head>
   <body>
     <noscript>
